--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-URL=http://localhost:5000
+URL=188.165.26.159
 PORT=5000
 RIOT_CDN_V=http://ddragon.leagueoflegends.com/cdn/13.17.1
 RIOT_CDN=http://ddragon.leagueoflegends.com/cdn
 RIOT_CDN_CANISBACK=http://ddragon.canisback.com
 DB_NAME=lolguides.db
-ORIGIN_URLS=http://localhost:3000,http://localhost:3001
+ORIGIN_URLS=http://188.165.26.159,http://localhost:3001,http://localhost:3000
 API_KEY=f2f2786a-c06e-4485-a82b-58cb68449b6f
