--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-URL=http://188.165.26.159:5000
-PORT=5000
+URL=https://188.165.26.159:80
+PORT=80
 RIOT_CDN_V=http://ddragon.leagueoflegends.com/cdn/13.17.1
 RIOT_CDN=http://ddragon.leagueoflegends.com/cdn
 RIOT_CDN_CANISBACK=http://ddragon.canisback.com
