--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-URL=https://lolguides.space
+#URL=https://lolguides.space
+URL=http://localhost:5000
 PORT=5000
 RIOT_CDN_V=http://ddragon.leagueoflegends.com/cdn/13.17.1
 RIOT_CDN=http://ddragon.leagueoflegends.com/cdn
