--- a/.env.prod
+++ b/.env.prod
@@ -1,9 +1,8 @@
 URL=https://lolguides.space
-#URL=http://localhost:5000
 PORT=5000
-RIOT_CDN_V=http://ddragon.leagueoflegends.com/cdn/13.17.1
-RIOT_CDN=http://ddragon.leagueoflegends.com/cdn
-RIOT_CDN_CANISBACK=http://ddragon.canisback.com
+RIOT_CDN_V=https://ddragon.leagueoflegends.com/cdn/13.17.1
+RIOT_CDN=https://ddragon.leagueoflegends.com/cdn
+RIOT_CDN_CANISBACK=https://ddragon.canisback.com
 DB_NAME=lolguides.db
 ORIGIN_URLS=https://lolguides.space,http://localhost:3001,http://localhost:3000
 API_KEY=f2f2786a-c06e-4485-a82b-58cb68449b6f
