--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "cross-env NODE_ENV=dev nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -19,7 +19,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "start:pm2": "pm2 start dist/main.js --name lolguides"
+    "start:pm2": "cross-env NODE_ENV=prod pm2 start dist/main.js --name lolguides"
   },
   "dependencies": {
     "@fastify/multipart": "^6.0.0",
@@ -33,6 +33,7 @@
     "@nestjs/typeorm": "^9.0.1",
     "axios": "^1.1.3",
     "class-validator": "^0.13.2",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "fastify-file-interceptor": "^1.0.8",
