--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "start:pm2": "export NODE_ENV=prod && pm2 start dist/main.js --name lolguides",
     "reload:pm2": "pm2 delete lolguides && export NODE_ENV=prod && pm2 start dist/main.js --name lolguides",
-    "deploy:prod": "nest build && pm2 delete lolguides && export NODE_ENV=prod && pm2 start dist/main.js --name lolguides"
+    "deploy": "nest build && pm2 delete lolguides && export NODE_ENV=prod && pm2 start dist/main.js --name lolguides"
   },
   "dependencies": {
     "@fastify/multipart": "^6.0.0",
